<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="com.example.camnews.helpers.StateEnum"/>
        <import type="android.view.View"/>
        <variable
            name="newsViewModel"
            type="com.example.camnews.viewmodels.NewsViewModel" />
    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.HomeActivity"
        android:background="#FFFFFF"
        android:theme="@style/ThemeOverlay.CamNews.FullscreenContainer">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingVertical="10dp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/greetingText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/good_morning"
                        android:textColor="@color/black"
                        android:textSize="18sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome_to_camnews"
                        android:textSize="14sp"/>
                </LinearLayout>
                <ImageView
                    android:id="@+id/timeLogo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/sunrise"
                    android:contentDescription="@string/welcome_image2" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/searchBar"
                android:layout_marginVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/search_bar"
                android:layout_marginHorizontal="16dp"
                android:paddingHorizontal="15dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/home_search"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/search"
                    app:tint="@color/gray"
                    android:contentDescription="@string/todo" />
                <TextView
                    android:id="@+id/homeSearchText"
                    app:layout_constraintLeft_toRightOf="@id/home_search"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:layout_marginStart="10dp"
                    android:text="@string/search"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:paddingVertical="10dp"
                android:id="@+id/categoryList"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news_for_you"
                android:paddingHorizontal="16dp"
                android:paddingVertical="10dp"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/articlesView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{newsViewModel.state == StateEnum.LOADED? View.VISIBLE: View.GONE}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:adapter="@{newsViewModel.article}"/>
            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/articleShrimmers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{newsViewModel.state == StateEnum.LOADING? View.VISIBLE: View.GONE}">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <include layout="@layout/article_shrimmer_layout"/>
                    <include layout="@layout/article_shrimmer_layout"/>
                    <include layout="@layout/article_shrimmer_layout"/>
                    <include layout="@layout/article_shrimmer_layout"/>
                    <include layout="@layout/article_shrimmer_layout"/>
                    <include layout="@layout/article_shrimmer_layout"/>
                    <include layout="@layout/article_shrimmer_layout"/>
                </LinearLayout>
            </com.facebook.shimmer.ShimmerFrameLayout>
            <include
                android:id="@+id/articlesError"
                layout="@layout/error_layout"
                app:newsViewModel="@{newsViewModel}"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>